Basic dist build, and all that was required to achieve it. Mostly using webpack now with library output, the key thing is giving it an empty value.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,18 @@
 {
   "compilerOptions": {
+	"outDir": "dist/",
 	"target": "es5",
 	"module": "commonjs",
-	"experimentalDecorators": true,
 	"emitDecoratorMetadata": true,
-	"lib": ["es2015", "dom"]
-  }
+	"experimentalDecorators": true,
+	"sourceMap": true,
+	"noImplicitAny": false,
+	"preserveConstEnums": true,
+	"removeComments": false,
+	"lib": ["es2015", "dom"],
+	"allowJs": true
+  },
+  "exclude": [
+  	"node_modules"
+  ]
 }
