--- a/package.json
+++ b/package.json
@@ -7,11 +7,20 @@
 
   },
   "devDependencies": {
-	"gulp": "^3.9.1",
-	"gulp-sourcemaps": "^2.6.0",
-	"gulp-typescript": "^3.2.1",
-	"gulp-uglify": "^3.0.0",
-	"small": "^0.2.9",
-	"typescript": "^2.1.5"
-  }
+    "@types/jquery": "^3.2.11",
+    "gulp": "^3.9.1",
+    "gulp-sourcemaps": "^2.6.0",
+    "gulp-typescript": "^3.2.1",
+    "gulp-uglify": "^3.0.0",
+    "lite-server": "^2.1.0",
+    "small": "^0.2.9",
+    "ts-loader": "^2.3.2",
+    "typescript": "^2.4.2",
+    "webpack": "^3.5.2"
+  },
+  "scripts": {
+    "dev": "lite-server",
+    "build": "webpack --config webpack.config.js"
+  },
+  "typings": {}
 }
